--- a/index.html
+++ b/index.html
@@ -423,12 +423,13 @@ n1 &lt;- rPlot(freq ~ x, data = count_swear_dates, type = &quot;point&quot;)
   </hgroup>
   <article data-timings="">
     <pre><code class="r">load(file=&quot;swear_plot_obj.RData&quot;)
-n1
+# n1$print(&quot;chart_swear_words&quot;)
+# n1  -- won&#39;t show up in browser, issue bug to slidify maybe?
 </code></pre>
 
-<p><iframe src=' assets/fig/unnamed-chunk-10-1.html ' scrolling='no' frameBorder='0' seamless class='rChart polycharts ' id=iframe- chart25901f846207 ></iframe> <style>iframe.rChart{ width: 100%; height: 400px;}</style></p>
-
-<p><img src="" /></p>
+<p><center>
+<img src="https://dl.dropboxusercontent.com/u/103068909/swearing.png" />
+</center></p>
 
   </article>
   <!-- Presenter Notes -->
